improved the doc

--- a/package.json
+++ b/package.json
@@ -24,17 +24,14 @@
   "files": [
     "dist"
   ],
-  "_devNotes": {
-    "npm run dev": "uses local package from ../app-core",
-    "npm run build": "uses package from Git repository for app-core",
-    "dependencies": "The dependencies below are PRODUCTION versions. These are used when npm install is run by cloudflare"
-  },
   "scripts": {
+    "_devComment": "Command '>npm run dev' for development with hot reload uses local package from ../app-core",
     "dev": "npm run deps:dev && vite",
+    "_buildComment": "uses package from Git repository for app-core",
     "build": "npm run deps:prod && vite build",
     "build:lib": "npm run deps:prod && vite build --mode lib",
-    "prepublishOnly": "pnpm run build:lib",
-    "preview": "vite preview --port 5173",
+     "_previewComment": "Serves locally built files from dist/ folder. it doesn't build, just serves what's already in dist/",   
+    "preview": "vite preview",
     "_comment": "deps:dev installs local package temporarily (--no-save), deps:prod ensures Git repo is used",
     "deps:dev": "npm install @y2kfund/core@file:../app-core --no-save",
     "deps:prod": "npm install @y2kfund/core@git+https://github.com/y2kfund/app-core.git --no-save"
@@ -49,6 +46,7 @@
     "@y2kfund/core": "^0.1.0",
     "vue": "^3.4.0"
   },
+  "_devDependenciesComment": "The devDependencies below use PRODUCTION versions from Git. These are used when npm install is run by cloudflare",
   "devDependencies": {
     "@tanstack/vue-query": "^5.0.0",
     "@types/node": "^24.4.0",
