--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dist"
   ],
   "dependencies": {
+    "ag-grid-community": "^34.2.0",
+    "ag-grid-vue3": "^34.2.0",
     "chart.js": "^4.5.0",
     "vue": "^3.4.0",
     "vue-chartjs": "^5.3.2",
@@ -52,7 +54,7 @@
     "_buildComment": "uses package from Git repository for app-core",
     "build": "npm run deps:prod && vite build",
     "build:lib": "npm run deps:prod && vite build --mode lib",
-     "_previewComment": "Serves locally built files from dist/ folder. it doesn't build, just serves what's already in dist/",   
+    "_previewComment": "Serves locally built files from dist/ folder. it doesn't build, just serves what's already in dist/",
     "preview": "vite preview",
     "_comment": "deps:dev installs local package temporarily (--no-save), deps:prod ensures Git repo is used",
     "deps:dev": "npm install @y2kfund/core@file:../app-core --no-save",
