--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ag-grid-community": "^34.2.0",
     "ag-grid-vue3": "^34.2.0",
     "chart.js": "^4.5.0",
+    "flatpickr": "^4.6.13",
     "html2canvas": "^1.4.1",
     "tabulator-tables": "^6.3.1",
     "vue": "^3.4.0",
